@@ -864,13 +864,9 @@ Key5Light=on
 # UDP port on which LIRC is listening [default: 8765; legal: 1 - 65535]
 LircPort=8765
 
-# Duration in jiffies of the synthesized sync pulse [default: 64; 0 to suppress]
-LircSync=64
-
-# Duration in jiffies of the synthesized gap; 0 to suppress, default 2048.
-# This is really the fixed duration of an entire IR command; individual pulse/space 
-# durations are deducted from this to determine the duration of the trailing gap.
-LircLength=2048
+# Threshold in jiffies of synthesized gap that triggers flushing the IR data to lirc
+# [default: 100 (6.1ms); 0 to suppress]
+LircFlushThreshold=100
 
 
 
