@@ -12,6 +12,7 @@ v.0.5dev (ongoing development)
  * Include <errno.h> instead of <sys/errno.h> everywhere (found by S. Klauer)
  * configure: Fix de-selecting of drivers
  * Build system: Add a check testing if SA_RESTART flag is available.
+ * picolcd driver: Fix RC-5 for picoLCD 20x2 (A. van Schie)
 
 v0.5.3
  + lcdexec: notification when called program finishes
